# amrit-docs-mcp

./: .gitignore  README.md  pyproject.toml
src/amrit_docs_mcp/: __init__.py  embed.py  ingest.py  server.py  store.py
