[project]
name = "amrit-docs-mcp"
version = "0.1.0"
description = "POC MCP server that indexes AMRIT repository READMEs and serves semantic search to AI agents (Claude Code, Cursor, etc.)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[project.scripts]
amrit-docs-mcp = "amrit_docs_mcp.server:main"
amrit-docs-ingest = "amrit_docs_mcp.ingest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]